# colib

./: CMakeLists.txt
include/: articulated_model.h  collision_world.h  pinocchio_model.h
src/: articulated_model.cpp  collision_world.cpp  pinocchio_model.cpp
